add the eslint configs

--- a/Raw JS/demo/src/package.json
+++ b/Raw JS/demo/src/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "App.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier \"/**/*.{js,html}\" --write",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint \"/**/*.{js,jsx}\" --quiet"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
     "prettier": "^2.2.1"
   }
 }
