--- a/Raw JS/demo/src/package.json
+++ b/Raw JS/demo/src/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "App.js",
   "scripts": {
+    "dev": "parcel demo.html",
     "format": "prettier \"/**/*.{js,html}\" --write",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint \"/**/*.{js,jsx}\" --quiet"
@@ -15,6 +16,7 @@
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
   }
 }
