--- a/Raw JS/demo/src/package.json
+++ b/Raw JS/demo/src/package.json
@@ -18,5 +18,9 @@
     "eslint-plugin-import": "^2.22.1",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
